Command-line commands can be used to fully automate
Select your Key Dir & Files like you would normally
Show / hide password influences the printed command
The Print Command button will appear at lower right
The printed command is equivalent to the GUI action
This update is particular for all ICT professionals

FinalCrypt now supports 75 languages (homepage FAQ)

Date: 2019-12-23 Version: 6.2.0

FinalCrypt now supports 65 languages based on ISO639
Improved language selection with keyboard navigation
Cleaner User Interface with 2 Multi-Function Buttons
Fixed FinalCrypt not Exiting on closing application

Date: 2019-12-13 Version: 6.1.1

Translation keys are now Google Translate Safe
Manual translation corrections of 20 languages

Date: 2019-12-12 Version: 6.1.0

Graphical user-interface restyled & simplyfied
The user-interface now only shows relevant info
Less destraction and more focus to what you do

Language corrections & updates of 45 languages
Removed duo latin lines on non latin languages

Date: 2019-12-10 Version: 6.0.2

This update adds up to a total of 45 languages

Date: 2019-12-09 Version: 6.0.1

Fixed startup intro and welcome display order
Fixed bug crashing on enabled audio at startup
Fixed large Chinese user-guidance startup text
Fixed Support Window glyphs in Farsi Language
Fixed Apple OSX bug hanging GUI by FileManager
Improved internationalization GUI realignments

Date: 2019-12-08 Version: 6.0.0

International new version with 32 Languages

Arabic,Bulgarian,Chinese,Croatian,Czech,Dutch
English,Esperanto,Farsi,French,German,Greek
Hindi,Hungarian,Icelandic,Indonesian,Italian
Kazakh,Latvian,Malaysian,Maltees,Norwegian
Polish,Portugese,Romanian,Russian,Serbian
Spanish,Swedish,Thai,Turkish,Ukrainian

Improved User Interface with better overview
Improved file manager behavior & presentation
Improved UserGuidance, Display & Button Layou

If you want to improve language then edit
the translation*.properties files in the